css/style.css
:root {
  --animation-duration: 0.6s;
}

body {
	font-family: Arial;
	font-size: 16px;
	line-height: 1.5;
	
	background-color: #ffffff;
	color: #333333;
	margin: 40px auto 40px auto;
	width: 620px;
}


input[type="submit"],
input::-webkit-file-upload-button {
  border: none;
  outline: none;
  padding: 0.3em 0.5em;
  border-radius: 5px;
  background-color: #0074d9;
  color: white;
}

input[type="submit"]:disabled {
  background-color: #dadada;
}

input[type="submit"]:not(:disabled):hover {
  background-color: #0661b1;
}

.error {
  color: #0074d9;
  font-weight: bold;
}
.hidden {
  opacity: 0;
}

.canvas-holder {
  position:  fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
}

.canvas-holder canvas {
  position:  fixed;
	left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.form-container {
  background-color:  white;
  position: fixed;
  top: 50%;
  left:  50%;
  transform: translate(50vw,-50vh) translateX(-100%) translate(-10px, 10px);
  width: 2em;
  height: 2em;
  border-radius: 5px;
  transition: all var(--animation-duration);
}

.form-container.visible {
  height: 180px;
  max-width: 450px;
  width: calc(100% - 20px);
  transform: translate(-50%,-50%);
  padding: 2em;
  border-radius: 10px;
}

.form-container .load-form {
  opacity: 0;
}

.form-container.visible .load-form {
  animation: appear 0.2s 1 ease-out;
  animation-delay: var(--animation-duration);
  animation-fill-mode: forwards;
}

@keyframes appear {
  from {opacity: 0;}
  to {opacity: 1;}
}

.load-form {
  display: flex;
  gap: 0.5em;
  flex-direction: column;
}

.action-btn {
  position: absolute;
  right: 0em;
  top: 0em;
  font-size: 2em;
  line-height: 1em;
  border: none;
  outline: none;
  padding: 0;
  width: 1em;
  height: 1em;
  background: none;
  color: #333333;
  z-index: 10;
}

.form-container.visible .action-btn {
  transform: rotate(45deg);
}

